# flask-vue

./: .env  .gitignore  launch.json  poetry.sh  pyproject.toml  settings.toml
safe/: api.py  app.py  docker-compose.yml  model.py  requirements.txt
safe/static/js/: chart.js
safe/templates/: chart.html  code.html  index.html
safe/templates/includes/: _footer.html  _header.html
safe/templates/js/: test.js
safe/tests/: test_safe.py
tests/: testefuncional
wotv/: Dockerfile  app.py  docker-compose.yml  dump-postgres-202010302049.sql  requirements.txt
wotv/databases/: database.dbp
wotv/extensions/: admin.py
wotv/templates/: document.html  index.html
wotv/templates/includes/: _footer.html  _header.html
wotv/tests/: tests.py
wotv/views/: api.py  gpt.py  nlp.py  view.py
